--- a/QgisModelBaker/ui/set_sequence_panel.ui
+++ b/QgisModelBaker/ui/set_sequence_panel.ui
@@ -14,13 +14,17 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="sequence_value"/>
-   </item>
    <item row="0" column="0">
     <widget class="QLabel" name="sequence_label">
      <property name="text">
       <string>T_Id (Sequence) Value</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QSpinBox" name="sequence_value_edit">
+     <property name="maximum">
+      <number>2147483647</number>
      </property>
     </widget>
    </item>
