--- a/QgisModelBaker/ui/set_sequence_panel.ui
+++ b/QgisModelBaker/ui/set_sequence_panel.ui
@@ -14,6 +14,18 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="0" column="0" colspan="2">
     <widget class="QGroupBox" name="sequence_group">
      <property name="toolTip">
