--- a/QgisModelBaker/ui/set_sequence_panel.ui
+++ b/QgisModelBaker/ui/set_sequence_panel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>744</width>
-    <height>88</height>
+    <height>99</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,17 +41,24 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
+      <item row="1" column="0">
        <widget class="QLabel" name="sequence_label">
         <property name="text">
          <string>T_Id (Sequence) Value</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <widget class="QSpinBox" name="sequence_value_edit">
         <property name="maximum">
          <number>2147483647</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="pg_use_super_login">
+        <property name="text">
+         <string>Use logins from settings (superuser) for this operation</string>
         </property>
        </widget>
       </item>
